# loom

./: .gitignore  CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  LICENSE  README.md  README_zh.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.cargo/: config.toml
.github/workflows/: ci.yml  desktop-release.yml  release.yml
.superpowers/brainstorm/: logo-concepts.html  logo-final.html  wordmark-case.html
apps/desktop/: .gitignore  README.md  package.json
apps/desktop/scripts/: build-sidecar.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: gen_icon.py  icon.icns
apps/desktop/src-tauri/src/: dialog.rs  main.rs  sidecar.rs  tray.rs
docs/: DESIGN.md
docs/superpowers/plans/: 2026-04-20-loom-implementation.md  2026-04-20-skill-manager-implementation.md  2026-04-20-source-management-implementation.md  2026-04-21-desktop-tauri-implementation.md  2026-04-21-logo-implementation.md
docs/superpowers/specs/: 2026-04-20-logo-design.md  2026-04-20-loom-design.md  2026-04-20-skill-manager-design.md  2026-04-20-source-management-design.md  2026-04-21-desktop-tauri-design.md
